webservers/gunvor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gunvor
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 8h"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gunvor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gunvor
    spec:
      containers:
      - name: gunvor
        image: harbor.k8s.lenin.nu/webpages/gunvorminne:v0.13
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128M
          requests:
            cpu: 100m
            memory: 64M
