webservers/gunvor/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gunvor-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`gunvor.lindblad.net`)
    kind: Rule
    middlewares:
    - name: httpsredirect
    services:
    - name: gunvor-svc
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gunvor-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: secret-gunvor-lindblad.net
  routes:
  - match: Host(`gunvor.lindblad.net`)
    kind: Rule
    services:
    - name: gunvor-svc
      port: 80
